[gd_scene load_steps=2 format=3 uid="uid://cxud7aqiql0m6"]

[ext_resource type="Script" uid="uid://cqhjnn836202d" path="res://Scripts/main.gd" id="1_jjgbg"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jjgbg")

[node name="Join" type="Button" parent="."]
layout_mode = 0
offset_left = 14.0
offset_top = -1.0
offset_right = 113.0
offset_bottom = 61.0
text = "Join"

[node name="host" type="Button" parent="."]
layout_mode = 0
offset_left = -113.0
offset_right = -14.0
offset_bottom = 62.0
text = "Host"

[node name="LobbyID" type="LineEdit" parent="."]
layout_mode = 0
offset_left = -267.0
offset_top = 96.0
offset_right = 279.0
offset_bottom = 127.0

[connection signal="pressed" from="Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="host" to="." method="_on_host_pressed"]
